[UPDATE] Notice - class to lecture

--- a/ulink/api/docs/notice/noticeSubject.yaml
+++ b/ulink/api/docs/notice/noticeSubject.yaml
@@ -62,7 +62,7 @@ get:
                             "date": "2020-07-16"
                         }
                     ],
-                    "class": [
+                    "lecture": [
                         {
                             "noticeIdx": 5,
                             "title": "수업 휴강",
