--- a/ulink/api/docs/user/signUp.yaml
+++ b/ulink/api/docs/user/signUp.yaml
@@ -14,6 +14,7 @@ post:
             - password
             - email
             - school
+            - gender
           properties:
             id:
               type: string
@@ -30,6 +31,9 @@ post:
             school:
               type: string
               example: 한양대학교
+            gender:
+              type: string
+              example: m
           type: object
     description: User data to sign up
   responses:
