--- a/ulink/api/docs/schedule/scheduleIdx.yaml
+++ b/ulink/api/docs/schedule/scheduleIdx.yaml
@@ -1,9 +1,9 @@
 get:
   tags:
     - Schedule
-  summary: 시간표 - 일정 상세정보(통합) 조회
-  operationId: getSpecificSchedule
-  description: 시간표 - 일정 상세정보(통합) 조회
+  summary: 시간표 - 시간표 조회
+  operationId: getTimeTable
+  description: 시간표 - 시간표 조회
   parameters:
     - in: header
       name: token
@@ -15,17 +15,11 @@ get:
       name: idx
       required: true
       schema:
-        type: string
-      description: 일정 idx (메인시간표에서의 idx)
-    - in: query
-      name: isSubject
-      required: true
-      schema:
-        type: boolean
-      description: 학교일정(true)/개인일정(false)
+        type: number
+      description: 시간표 idx    
   responses:
     '200':
-      description: 시간표 - 일정 상세정보 조회
+      description: 시간표 - 시간표 조회
       content:
         application/json:
           schema:
@@ -42,150 +36,139 @@ get:
                 example: 시간표 조회 성공
               data:
                 type: object
-                example: {
-                    "color": 6,
-                    "subjectIdx": 3,
-                    "subjectCode": "1001003",
-                    "name": "컴퓨터 네트워크",
-                    "nameAtomic": "ㅋㅓㅁㅍㅠㅌㅓㄴㅔㅌㅡㅇㅜㅓㅋㅡ",
-                    "professor": "이아무개",
-                    "school": "서울대학교",
-                    "college": "공과대학",
-                    "major": "소프트웨어학과",
-                    "semester": "2020-1",
-                    "grade": 2,
-                    "credit": 3,
-                    "people": 20,
-                    "course": "전공선택",
-                    "startTime": "11:00",
-                    "endTime": "13:00",
-                    "day": 1,
-                    "content": "창조관709"
-                }
-    '400':
-      description: 'invalid input, object invalid'
-      content:
-        application/json:
-          schema:
-            type: object
-            $ref: '../schema/fail.yaml'
+                example: 
+                  {
+                    "timeTable": {
+                      "scheduleIdx": 2,
+                      "semester": "2020-1",
+                      "name": "보배스 시간표"
+                    },
+                    "minTime": "09:00",
+                    "maxTime": "20:00",
+                    "subjects": {
+                      "0": [
+                        {
+                          "idx": 1,
+                          "name": "스터디",
+                          "startTime": "17:00",
+                          "endTime": "20:00",
+                          "day": 0,
+                          "content": "개인일정",
+                          "color": 1,
+                          "subject": false
+                        },
+                        {
+                          "idx": 5,
+                          "name": "전자기학",
+                          "startTime": "09:00",
+                          "endTime": "11:00",
+                          "day": 0,
+                          "content": "공학관402",
+                          "color": 5,
+                          "subject": true
+                        }
+                      ],
+                      "1": [
+                        {
+                          "idx": 2,
+                          "name": "알바",
+                          "startTime": "14:00",
+                          "endTime": "20:00",
+                          "day": 1,
+                          "content": "투썸",
+                          "color": 1,
+                          "subject": false
+                        },
+                        {
+                          "idx": 5,
+                          "name": "전자기학",
+                          "startTime": "09:00",
+                          "endTime": "11:00",
+                          "day": 1,
+                          "content": "공학관313",
+                          "color": 5,
+                          "subject": true
+                        },
+                        {
+                          "idx": 6,
+                          "name": "컴퓨터 네트워크",
+                          "startTime": "11:00",
+                          "endTime": "13:00",
+                          "day": 1,
+                          "content": "창조관709",
+                          "color": 6,
+                          "subject": true
+                        }
+                      ],
+                      "2": [
+                        {
+                          "idx": 3,
+                          "name": "근로",
+                          "startTime": "16:00",
+                          "endTime": "20:00",
+                          "day": 2,
+                          "content": "성신여대",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 26,
+                          "name": "경영학개론",
+                          "startTime": "09:00",
+                          "endTime": "10:30",
+                          "day": 2,
+                          "content": "경영관202",
+                          "color": 1,
+                          "subject": true
+                        }
+                      ],
+                      "3": [
+                        {
+                          "idx": 6,
+                          "name": "컴퓨터 네트워크",
+                          "startTime": "11:00",
+                          "endTime": "13:00",
+                          "day": 3,
+                          "content": "창조관502",
+                          "color": 6,
+                          "subject": true
+                        }
+                      ],
+                      "4": [
+                        {
+                          "idx": 24,
+                          "name": "몰라임마",
+                          "startTime": "12:00",
+                          "endTime": "13:00",
+                          "day": 4,
+                          "content": "편의점",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 25,
+                          "name": "몰라임마",
+                          "startTime": "12:00",
+                          "endTime": "13:00",
+                          "day": 4,
+                          "content": "편의점",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 26,
+                          "name": "경영학개론",
+                          "startTime": "09:00",
+                          "endTime": "10:30",
+                          "day": 4,
+                          "content": "경영관B102",
+                          "color": 1,
+                          "subject": true
+                        }
+                      ]
+                    }
+                  }
 
-
-put:
-  tags:
-    - Schedule
-  summary: 일정 색상 수정하기
-  operationId: updateTimeTableColor
-  description: 일정 색상 수정
-  parameters:
-    - in: header
-      name: token
-      required: true
-      schema:
-        type: string
-      description: JWT 토큰
-    - in: query
-      name: isSubject
-      required: true
-      schema:
-        type: boolean
-      description: true
-    - in: path
-      name: idx
-      required: true
-      schema:
-        type: number
-      description:  idx
-  requestBody:
-    content:
-      application/json:
-        schema:
-          required:
-            - color
-          properties:
-            name:
-              type: number
-              example: 2
-          type: object
-    description: Update Main Timetable Name data
-  responses:
-    '200':
-      description: 시간표 - 일정 색상 변경
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                type: integer
-                example: 200
-              success:
-                type: boolean
-                example: true
-              message:
-                type: string
-                example: 일정 수정 성공
-              data:
-                type: object
-                example: {
-                  "idx": "1",
-                }
-    '400':
-      description: 'invalid input, object invalid'
-      content:
-        application/json:
-          schema:
-            type: object
-            $ref: '../schema/fail.yaml'
-
-
-delete: 
-  tags:
-    - Schedule
-  summary: 시간표 - 일정 삭제 (통합)
-  operationId: deleteSpecificSchedule
-  description: 시간표 - 일정 삭제 (통합)
-  parameters:
-    - in: header
-      name: token
-      required: true
-      schema:
-        type: string
-      description: JWT 토큰
-    - in: path
-      name: idx
-      required: true
-      schema:
-        type: string
-      description: 일정 idx
-    - in: query
-      name: isSubject
-      required: true
-      schema:
-        type: boolean
-      description: 학교일정(true)/개인일정(false)
-  responses:
-    '200':
-      description: 시간표 - 일정 삭제 (통합)
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                type: integer
-                example: 200
-              success:
-                type: boolean
-                example: true
-              message:
-                type: string
-                example: 일정 삭제 성공
-              data:
-                type: object
-                example: {
-                    "idx": "15"
-                }
     '400':
       description: 'invalid input, object invalid'
       content:
