--- a/ulink/api/docs/schedule/scheduleMain.yaml
+++ b/ulink/api/docs/schedule/scheduleMain.yaml
@@ -1,9 +1,9 @@
-put:
+get:
   tags:
     - Schedule
-  summary: 시간표 - 메인 시간표 수정(변경)
-  operationId: updateMainTimeTable
-  description: 시간표 - 메인 시간표 수정(변경)
+  summary: 시간표 - 메인 시간표 조회
+  operationId: getMainTimeTable
+  description: 시간표 - 메인 시간표 조회
   parameters:
     - in: header
       name: token
@@ -11,15 +11,9 @@ put:
       schema:
         type: string
       description: JWT 토큰
-    - in: path
-      name: idx
-      required: true
-      schema:
-        type: string
-      description: 시간표 idx
   responses:
     '200':
-      description: 시간표 - 메인 시간표 수정(변경)
+      description: 시간표 - 메인 시간표 조회
       content:
         application/json:
           schema:
@@ -33,61 +27,162 @@ put:
                 example: true
               message:
                 type: string
-                example: 일정 수정 성공
+                example: 시간표 조회 성공
               data:
                 type: object
-                example: {
-                    "idx": "7"
-                }
-    '400':
-      description: 'invalid input, object invalid'
-      content:
-        application/json:
-          schema:
-            type: object
-            $ref: '../schema/fail.yaml'
+                example: 
+                  {
+                    "timeTable": {
+                      "scheduleIdx": 2,
+                      "semester": "2020-1",
+                      "name": "보배스 시간표"
+                    },
+                    "minTime": "09:00",
+                    "maxTime": "22:00",
+                    "subjects": {
+                      "0": [
+                        {
+                          "idx": 1,
+                          "name": "스터디",
+                          "startTime": "17:00",
+                          "endTime": "20:00",
+                          "day": 0,
+                          "content": "개인일정",
+                          "color": 1,
+                          "subject": false
+                        },
+                        {
+                          "idx": 5,
+                          "name": "전자기학",
+                          "startTime": "09:00",
+                          "endTime": "11:00",
+                          "day": 0,
+                          "content": "공학관402",
+                          "color": 5,
+                          "subject": true
+                        }
+                      ],
+                      "1": [
+                        {
+                          "idx": 2,
+                          "name": "알바",
+                          "startTime": "14:00",
+                          "endTime": "20:00",
+                          "day": 1,
+                          "content": "투썸",
+                          "color": 1,
+                          "subject": false
+                        },
+                        {
+                          "idx": 5,
+                          "name": "전자기학",
+                          "startTime": "09:00",
+                          "endTime": "11:00",
+                          "day": 1,
+                          "content": "공학관313",
+                          "color": 5,
+                          "subject": true
+                        },
+                        {
+                          "idx": 6,
+                          "name": "컴퓨터 네트워크",
+                          "startTime": "11:00",
+                          "endTime": "13:00",
+                          "day": 1,
+                          "content": "창조관709",
+                          "color": 6,
+                          "subject": true
+                        }
+                      ],
+                      "2": [
+                        {
+                          "idx": 3,
+                          "name": "근로",
+                          "startTime": "16:00",
+                          "endTime": "20:00",
+                          "day": 2,
+                          "content": "성신여대",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 26,
+                          "name": "경영학개론",
+                          "startTime": "09:00",
+                          "endTime": "10:30",
+                          "day": 2,
+                          "content": "경영관202",
+                          "color": 1,
+                          "subject": true
+                        }
+                      ],
+                      "3": [
+                        {
+                          "idx": 26,
+                          "name": "알바",
+                          "startTime": "20:00",
+                          "endTime": "22:00",
+                          "day": 3,
+                          "content": "카페알바",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 6,
+                          "name": "컴퓨터 네트워크",
+                          "startTime": "11:00",
+                          "endTime": "13:00",
+                          "day": 3,
+                          "content": "창조관502",
+                          "color": 6,
+                          "subject": true
+                        }
+                      ],
+                      "4": [
+                        {
+                          "idx": 4,
+                          "name": "동아리",
+                          "startTime": "15:00",
+                          "endTime": "21:00",
+                          "day": 4,
+                          "content": "일찍가서세미나준비",
+                          "color": 4,
+                          "subject": false
+                        },
+                        {
+                          "idx": 24,
+                          "name": "몰라임마",
+                          "startTime": "12:00",
+                          "endTime": "13:00",
+                          "day": 4,
+                          "content": "편의점",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 25,
+                          "name": "몰라임마",
+                          "startTime": "12:00",
+                          "endTime": "13:00",
+                          "day": 4,
+                          "content": "편의점",
+                          "color": 3,
+                          "subject": false
+                        },
+                        {
+                          "idx": 26,
+                          "name": "경영학개론",
+                          "startTime": "09:00",
+                          "endTime": "10:30",
+                          "day": 4,
+                          "content": "경영관B102",
+                          "color": 1,
+                          "subject": true
+                        }
+                      ]
+                    }
+                  }
 
-delete: 
-  tags:
-    - Schedule
-  summary: 메인 시간표 삭제하기
-  operationId: deleteMainTimeTable
-  description: 메인 시간표 삭제하기
-  parameters:
-    - in: header
-      name: token
-      required: true
-      schema:
-        type: string
-      description: JWT 토큰
-    - in: path
-      name: idx
-      required: true
-      schema:
-        type: string
-      description: 시간표 idx
-  responses:
-    '200':
-      description: 메인 시간표 삭제하기
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                type: integer
-                example: 200
-              success:
-                type: boolean
-                example: true
-              message:
-                type: string
-                example: 일정 삭제 성공
-              data:
-                type: object
-                example: {
-                    "idx": "3"
-                }
     '400':
       description: 'invalid input, object invalid'
       content:
